hasil-page fixed

--- a/src/components/SoalCard.css
+++ b/src/components/SoalCard.css
@@ -4,9 +4,13 @@
 }
 
 .question {
-  margin: 20px;
+  margin: 10px 20px;
 }
 
 .choice {
-  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  padding-left: 20px;
+  padding-right: 20px;
 }
