--- a/src/pages/Hasil.css
+++ b/src/pages/Hasil.css
@@ -3,10 +3,8 @@
   height: 100vh;
   background-size: cover;
   font-family: "Roboto", sans-serif;
-}
-
-.hasil-card {
-  position: relative;
-  margin: 0 auto;
-  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
