--- a/src/components/HasilCard.css
+++ b/src/components/HasilCard.css
@@ -8,11 +8,17 @@
 .hasil-card-decor {
   justify-content: left;
   max-width: 60px;
-  margin: 10px 0 0 10px;
+  margin: 20px 0 0 20px;
+  position: relative;
+  z-index: 0;
 }
 
 .hasil-icon {
-  margin: 20px auto;
-  max-width: 100px;
-  max-height: 100px;
+  margin: 0px auto 30px;
+  min-width: 50px;
+  min-height: 50px;
+  text-align: center;
+  justify-content: center;
+  border-radius: 90px;
+  box-shadow: -5px 5px 5px rgb(235, 235, 235);
 }
