--- a/src/components/SoalCard.css
+++ b/src/components/SoalCard.css
@@ -1,16 +1,18 @@
 .sub-title {
   color: #0074e1;
   font-weight: bolder;
+  padding-left: 10px;
 }
 
 .question {
-  margin: 10px 20px;
+  margin: 20px;
 }
 
 .choice {
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
-  padding-left: 20px;
-  padding-right: 20px;
+  margin: 0 auto 30px;
+  padding-left: 30px;
+  padding-right: 30px;
+  text-align: left;
 }
