--- a/src/pages/Soal.css
+++ b/src/pages/Soal.css
@@ -6,10 +6,10 @@
 }
 
 .section-a {
-  height: 30vh;
+  height: 35vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   text-align: center;
 }
 
