--- a/src/components/HasilCard.css
+++ b/src/components/HasilCard.css
@@ -19,6 +19,6 @@
   min-height: 50px;
   text-align: center;
   justify-content: center;
-  border-radius: 90px;
-  box-shadow: -5px 5px 5px rgb(235, 235, 235);
+  /* border-radius: 90px;
+  box-shadow: -5px 5px 5px rgb(235, 235, 235); */
 }
